--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,11 @@ joblib
 jsonschema
 lxml
 MarkupSafe
-matplotlib==3.5.3
+matplotlib>=3.8.0
 nltk==3.7
-numpy==1.23.1
+numpy>=1.26.0
 packaging
-pandas==1.4.3
+pandas>=1.5.0
 Pillow
 protobuf
 psutil
@@ -29,13 +29,13 @@ Pygments
 regex
 requests
 rich
-scikit-learn==1.1.2
-scipy
+scikit-learn>=1.3.0
+scipy>=1.11.0
 semver
 six
 smmap
 soupsieve
-streamlit==1.12.0
+streamlit>=1.24.0
 tqdm
 toml
 toolz
